# mala_v1

./: .gitignore  LICENSE  PRD.md  README.md  hypothesis_agent.py  main.py  pyproject.toml  requirements.txt  research_state.yaml
config/: bias_sheet_template.csv  nightly_regime_matrix.yaml
docs/: CONVERGENCE_PLAN_2026-03-08.md  DAY_CLOSE_2026-03-08.md  EXPANDED_UNIVERSE_RESULTS_2026-03-08.md  HOLDOUT_VALIDATION_2026-03-08.md  M6_EXECUTION_MAPPING_AND_OD_V2_2026-03-08.md  MARKET_IMPULSE_EXPLORATION.md  MEASUREMENT_PLAN_RECALIBRATION.md  OPENING_DRIVE_AND_RESULTS_DB_2026-03-08.md  P1_CONVERGENCE_RESULTS_2026-03-09.md  POST_UPGRADE_DIRECTIONAL_MASS_EVAL_2026-03-08.md  RETUNE_RESULTS_2026-03-08.md  STATUS_AND_NEXT_STEPS_2026-03-08.md  STATUS_AND_NEXT_STEPS_2026-03-09.md  TIMEZONE_FIX_IMPACT_2026-03-08.md  UNIVERSAL_TRUTHS_STRATEGY_PLAN.md  bionic_loop_checklist.md  first_run_agentic.md  nightly_regime_matrix.md  strategy_surface.yaml  strategy_surface_notes.md  strategy_surface_proposed.yaml
scripts/: STATUS.md  backfill_exit_optimizations.py  backfill_master_playbook_catalog.py  compile_active_session.py  export_loop_artifacts.py  publish_regime_snapshot.py  push_trade_lab_bridge.py  query_results_db.py  replay_review_followups.py  run_agentic_first_pass.py  run_agentic_jerk_pivot_pass.py  run_agentic_market_impulse_pass.py  run_bias_playbook_router.py  run_convergence_pipeline.py  run_elastic_grid.py  run_execution_mapping.py  run_holdout_validation.py  run_jerk_pivot_backtest.py  run_measurement_sensitivity.py  run_nightly_regime_matrix.py  run_novel_ideas.py  run_opening_drive_classifier.py  run_p1_evaluation.py  (+5 more)
(+91 files in other folders)
